--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "cross-env NODE_ENV=dev nodemon ./bin/www"
+    "dev": "cross-env NODE_ENV=dev nodemon ./bin/www",
+    "production": "cross-env NODE_ENV=production nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,7 +16,12 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "connect-redis": "^4.0.3",
     "cross-env": "^6.0.3",
-    "nodemon": "^2.0.1"
+    "express-session": "^1.17.0",
+    "mysql": "^2.17.1",
+    "nodemon": "^2.0.1",
+    "redis": "^2.8.0",
+    "xss": "^1.0.6"
   }
 }
