--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
-  "name": "blog-express",
-  "version": "0.0.0",
+  "name": "blog-koa2",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "cross-env NODE_ENV=dev nodemon ./bin/www",
-    "production": "cross-env NODE_ENV=production nodemon ./bin/www"
+    "start": "node bin/www",
+    "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
+    "prd": "cross-env NODE_ENV=production pm2 start bin/www",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "debug": "^4.1.1",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-convert": "^1.2.0",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.0",
+    "koa-onerror": "^4.1.0",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "koa-views": "^6.2.0",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
-    "connect-redis": "^4.0.3",
     "cross-env": "^6.0.3",
-    "express-session": "^1.17.0",
+    "koa-generic-session": "^2.0.1",
+    "koa-morgan": "^1.0.1",
+    "koa-redis": "^4.0.0",
     "mysql": "^2.17.1",
-    "nodemon": "^2.0.1",
+    "nodemon": "^1.19.1",
     "redis": "^2.8.0",
     "xss": "^1.0.6"
   }
